Add additional stories and updates to epics documentation

--- a/_bmad-output/implementation-artifacts/E3-S2.md
+++ b/_bmad-output/implementation-artifacts/E3-S2.md
@@ -27,6 +27,10 @@ so that profiles and projects can be matched semantically.
    **Then** the error is logged
    **And** a meaningful error is returned
 
+4. **Given** the embedding API call (NFR)
+   **When** it completes successfully
+   **Then** response time is under 5 seconds
+
 ## Tasks / Subtasks
 
 - [ ] Task 1: Set up OpenAI client (AC: #1)
