--- a/_bmad-output/implementation-artifacts/E5-S1.md
+++ b/_bmad-output/implementation-artifacts/E5-S1.md
@@ -30,6 +30,11 @@ so that users can discover relevant opportunities.
    **When** the user owns a project
    **Then** that project is excluded from their matches
 
+5. **Given** the matching API endpoint (NFR)
+   **When** called with valid profile
+   **Then** response time is under 30 seconds for full generation
+   **And** system supports 100+ concurrent users
+
 ## Tasks / Subtasks
 
 - [ ] Task 1: Create matching service (AC: #1, #2)
