update note on updating specs in `spec/`

--- a/.AGENTS.md
+++ b/.AGENTS.md
@@ -19,6 +19,7 @@ AI agent instructions for the MeshIt codebase.
 - Pre-commit hook runs Prettier + ESLint on staged files via lint-staged
 - Branch naming: `feat/`, `fix/`, `chore/`, `refactor/`, `docs/`, `test/` prefixes
 - See `CONTRIBUTING.md` for full team conventions
+- If the work contains planning, update specs in `spec/`
 
 ## Git Workflow
 
