specify main / dev policy

--- a/.AGENTS.md
+++ b/.AGENTS.md
@@ -23,7 +23,8 @@ AI agent instructions for the MeshIt codebase.
 
 ## Git Workflow
 
-- Never work directly on `main` or `dev` — always use a feature/fix branch
+- Never work directly on `main`, almost never on `dev` — always use a feature/fix/… branch
+  - `dev` is fine for updating specs and documentation
 - If your work doesn't match the current branch's theme, create a new feature branch
 - Commit and push freely when on your own feature/fix branch
 - Only open a PR (target: `dev`) when work is complete and tests pass
