update bug descriptions

--- a/.AGENTS.md
+++ b/.AGENTS.md
@@ -44,6 +44,10 @@ Ensure `.env` (or `.env.local`) exists before running tests or dev server.
 
 Always run `pnpm build` before deploying to catch build-time errors.
 
+### Stale Cache
+
+"Element type is undefined" errors in dev mode can be caused by a stale `.next` cache, not a code bug. Fix: `rm -rf .next`, clear browser site data, restart `pnpm dev`.
+
 ### Suspense Boundaries
 
 - `useSearchParams()` must be wrapped in `<Suspense>` to avoid build errors
