add note to auto-update issues

--- a/.AGENTS.md
+++ b/.AGENTS.md
@@ -28,6 +28,8 @@ AI agent instructions for the MeshIt codebase.
 - If your work doesn't match the current branch's theme, create a new feature branch
 - Commit and push freely when on your own feature/fix branch
 - Only open a PR (target: `dev`) when work is complete and tests pass
+- After completing work on an issue, update its status via `gh` CLI (e.g. `gh issue close N --comment "..."`)
+- When creating related work, open new issues with `gh issue create`
 
 ## Worktrees
 
